# Electorium

./: .gitignore  Cargo.toml  readme.md
electorium/src/: introspector.rs  lib.rs  tests.rs
fuzz/: Cargo.toml  run.sh
fuzz-afl/: Cargo.toml  compile_cases.sh  readme.md  run.sh
fuzz-afl/inputs/: alice_bob_charlie.case  alice_bob_charlie.txt  charlie_patron.case  readme.md  ring_tie.case  runner_up_no_patron.case  two_rings_no_patron.case
fuzz-afl/src/: compile.rs  fuzz.rs  main.rs  names.rs  names.txt
fuzz/fuzz_targets/: fuzz_target_1.rs
fuzz/src/: main.rs
fuzzable/: Cargo.toml  build.rs  electorium_fuzzable.h
fuzzable/src/: lib.rs  names.rs
src/: introspector.rs  lib.rs  logging_introspector.rs  main.rs  tests.rs  types.rs
