[package]
name = "fuzz-afl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"
electorium = { path = ".." }

[[bin]]
name = "fuzz-afl"
path = "src/fuzz.rs"

[[bin]]
name = "compile-case"
path = "src/compile.rs"