[package]
name = "fuzzable"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "lib", "staticlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
electorium = { path = ".." }

[build-dependencies]
cbindgen = "0.26.0"
anyhow = "1"